force-app/main/default/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Property_Tax_Description__c</fullName>
        <description>Describe the reasoning for a particular property tax exemption status.</description>
        <inlineHelpText>Describe the property tax costs and reasoning for a particular property tax exemption status. This field is required in the REPAR.</inlineHelpText>
        <label>Property Tax Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Tax_Intention__c</fullName>
        <description>Describe the intent for property tax exemption status post closing.</description>
        <inlineHelpText>Describe the intent for property tax exemption status post closing.</inlineHelpText>
        <label>Property Tax Intention</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apply for Welfare Exemption</fullName>
                </value>
                <value>
                    <fullName>Remain Non-Exempt</fullName>
                </value>
                <value>
                    <fullName>Williamson Act</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Loan_Repayment_Schedule__c</fullName>
        <description>If a loan must be taken to fund a project, the schedule for repaying the loan must be stated.  If significant portions of the loan will be paid at known times, that information should be included</description>
        <inlineHelpText>Discuss CA Reserves loan or LPF loan repayment time line.</inlineHelpText>
        <label>Proposed Loan Repayment Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_Use_of_Groundwater_Well__c</fullName>
        <inlineHelpText>From the list, select the applicable purpose(s) and use(s) of the groundwater well(s).</inlineHelpText>
        <label>Purpose &amp; Use of Groundwater Well</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fill Ponds</fullName>
                </value>
                <value>
                    <fullName>Irrigate Land</fullName>
                </value>
                <value>
                    <fullName>Domestic Water</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Owner_Contact__c</fullName>
        <description>List all individuals/entities on record title together with the ownership interests of each and the contact information (address, phone, fax) for each owner.</description>
        <inlineHelpText>List all individuals/entities on record title together with the ownership interests of each and the contact information (address, phone, fax) for each owner.  If the information exceeds the field space, attach a document with remaining seller&apos;s info.</inlineHelpText>
        <label>Record Owner(s) &amp; Contact Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Required in CLS/LegalLink.</description>
        <inlineHelpText>Select the name of the Ecoregion (as defined by the World Wildlife Fund) for the property.</inlineHelpText>
        <label>Ecoregion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Central Coast</fullName>
                </value>
                <value>
                    <fullName>East Cascades - Modoc Plateau</fullName>
                </value>
                <value>
                    <fullName>Great Basin</fullName>
                </value>
                <value>
                    <fullName>Great Central Valley</fullName>
                </value>
                <value>
                    <fullName>Klamath Mountains</fullName>
                </value>
                <value>
                    <fullName>Mojave Desert</fullName>
                </value>
                <value>
                    <fullName>North Coast</fullName>
                </value>
                <value>
                    <fullName>Northern Current</fullName>
                </value>
                <value>
                    <fullName>Sierra Nevada</fullName>
                </value>
                <value>
                    <fullName>Sonoran Desert</fullName>
                </value>
                <value>
                    <fullName>South Coast</fullName>
                </value>
                <value>
                    <fullName>Southern Current</fullName>
                </value>
                <value>
                    <fullName>TEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risks_Related_Cons__c</fullName>
        <description>Describe all the legal, reputational, political, conservation, financial, and transactional risks associated with this deal.</description>
        <inlineHelpText>REPAR: Describe all the legal, reputational, political, conservation, financial, and transactional risks associated with this deal.</inlineHelpText>
        <label>Risk Mitigation</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>River_Miles__c</fullName>
        <inlineHelpText>How much riverbank do we have within or adjacent to this property interest?</inlineHelpText>
        <label>River Miles</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Senior_Project_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior Project Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000002jEw9EAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Significance_of_Cons__c</fullName>
        <description>A field describe how the conservation area and project fit into the ecoregional goals.</description>
        <inlineHelpText>How does this property contribute to regional conservation goals? Beyond target species, what other conservation values does this deal protect or give us the ability to restore?</inlineHelpText>
        <label>Basis for Conservation Priority</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Statement_ID__c</fullName>
        <description>Deprecated 2017 - moved to water rights.</description>
        <inlineHelpText>Please enter the Statement ID number issued from the State Water Resources Control Board upon filing an Initial Statement of Water Diversion and Use (Statement ID).</inlineHelpText>
        <label>XDeprecated: Statement ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_of_Funding__c</fullName>
        <description>Describe the status of fundraising for the Project when submitted for approval.  The description may include the amount of funds actually raised (if any), the amount of any funds pledged, the status of government funding for cooperative projects and/or the status of funds to be received from government grants.  Indicate whether the Project will be paid for from general fundraising or from funds raised as part of a chapter/national capital campaign.  Explain any unusual aspects of funding. Converted from Rich Text Area field to Long Text Area field 2017 KSA</description>
        <inlineHelpText>REPAR: Describe how all project costs are covered. Include cash in hand, what additional funds will be available for closing, what loan amount will be needed from what source, and what funds will be provided from what sources to repay the loan and when.</inlineHelpText>
        <label>Status of Funding</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stewardship_Funding__c</fullName>
        <description>Discuss how current threats will be mitigated and how targets will be sustained over the life of TNC involvment on this project.</description>
        <inlineHelpText>REPAR: Describe the strategies, parties and costs involved in sustaining the conservation targets under TNC management and beyond. Note if there will be any Startup Costs and/or Stewardship Endowment. Describe any unusually high stewardship startup costs.</inlineHelpText>
        <label>Stewardship Funding</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stewardship_Funds__c</fullName>
        <inlineHelpText>REPAR: A read-only field that calculates the total amount of stewardship expenses from the &quot;Sources &amp; Uses&quot; related list.</inlineHelpText>
        <label>Stewardship Funds</label>
        <summarizedField>Deal_Sources_Uses__c.Fund_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Deal_Sources_Uses__c.Fund_Type__c</field>
            <operation>equals</operation>
            <value>Stewardship Endowment, Stewardship Set-Aside</value>
        </summaryFilterItems>
        <summaryForeignKey>Deal_Sources_Uses__c.Tract_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subject_to_Will_Act__c</fullName>
        <description>Is all or any portion of the property subject to a Williamson Act Land Conservation Contract or government farming contracts?  If such contracts will be terminated, confirm whether a notice of termination of the contracts have been given and the date of any such notice.</description>
        <inlineHelpText>Is all or any portion of the property subject to a Williamson Act Land Conservation Contract or gov. farming contracts?  If such contracts will be terminated, confirm if a notice of termination of the contracts have been given and the date of the notice.</inlineHelpText>
        <label>Subject to Williamson Act/Gov. Farming?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Potentially</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TNC_Role_at_Cons__c</fullName>
        <description>REPAR: Describe the Conservancy&apos;s specific role at the conservation area.</description>
        <inlineHelpText>REPAR: Describe the Conservancy&apos;s specific role at the conservation area, and why we are best suited to play that role.</inlineHelpText>
        <label>TNC&apos;s Presence</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Take_Out_Strategy__c</fullName>
        <inlineHelpText>What is the take-out strategy for this deal? Please update if the plan changes.</inlineHelpText>
        <label>Take-Out Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Deal_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>TNC Holding Short Term</fullName>
                </value>
                <value>
                    <fullName>TNC Holding Long Term</fullName>
                </value>
                <value>
                    <fullName>Transferring to Local Land Trust</fullName>
                </value>
                <value>
                    <fullName>Transferring to Local Agency</fullName>
                </value>
                <value>
                    <fullName>Transferring to State Agency</fullName>
                </value>
                <value>
                    <fullName>Transferring to Federal Agency</fullName>
                </value>
                <value>
                    <fullName>Conservation Buyer Sale</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Takeut_Strategy_Description__c</fullName>
        <description>For any TNC acquisition, describe proposed takeout strategy, including government agency transfers, conservation buyer transactions, expected timing and amounts of same and current commitments for same.  For any TNC disposition, describe if the current takeout differs from the proposed takeout proposed at acquisition.</description>
        <inlineHelpText>REPAR: For acquisiton - Describe takeout strategy, including gov. agency transfers, conservation buyer transactions, expected timing and amounts. For disposition - describe if the takeout differs from the proposed takeout proposed at acquisition.</inlineHelpText>
        <label>Disposition</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Threats_to_be_Abated__c</fullName>
        <description>Renamed back to Threats to be Abated from Key Threats for this Project - 2017 KSA</description>
        <inlineHelpText>REPAR: Describe the primary threats to the conservation targets and how this project helps to mitigate them. (If there is a risk that the project will not mitigate the threats, describe as a “conservation risk” in the Risk Assessment field).</inlineHelpText>
        <label>Threats to be Abated</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transfer_Restrictions__c</fullName>
        <inlineHelpText>REPAR: Briefly describe how TNC&apos;s conservation objectives and legal compliance will be maintained after the property or interest in the property is transferred.</inlineHelpText>
        <label>Monitoring Transfers</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Lease_Property__c</fullName>
        <inlineHelpText>What type of lease is there on the property?</inlineHelpText>
        <label>Type of Lease on Property</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Agricultural</fullName>
                </value>
                <value>
                    <fullName>Federal Grazing Allotment</fullName>
                </value>
                <value>
                    <fullName>Grazing</fullName>
                </value>
                <value>
                    <fullName>Horses</fullName>
                </value>
                <value>
                    <fullName>Hunting</fullName>
                    <label>Hunting and/or Fishing</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>State Grazing Allotment</fullName>
                </value>
                <value>
                    <fullName>Tenants</fullName>
                </value>
                <value>
                    <fullName>Timber</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Water_Right_Type__c</fullName>
        <inlineHelpText>Select the type(s) of water rights that are associated with this interest(s).</inlineHelpText>
        <label>Water Right Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjudicated</fullName>
                </value>
                <value>
                    <fullName>Licensed Appropriative</fullName>
                </value>
                <value>
                    <fullName>Groundwater</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
                <value>
                    <fullName>Pre-1914 Appropriative</fullName>
                </value>
                <value>
                    <fullName>Riparian</fullName>
                </value>
                <value>
                    <fullName>Stockpond</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Water_Rights_Description__c</fullName>
        <inlineHelpText>Please include a a detailed description on how the water right is or is not used on the property.</inlineHelpText>
        <label>Water Rights Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Watershed__c</fullName>
        <inlineHelpText>Please identify the watershed the water right relates to.</inlineHelpText>
        <label>Watershed</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Williamson_Act_details__c</fullName>
        <description>The Williamson Act of the US state of California (officially, the California Land Conservation Act of 1965) is a California law that provides relief of property tax to owners of farmland and open-space land in exchange for a ten-year agreement that the land will not be developed or otherwise converted to another use.</description>
        <inlineHelpText>Please describe the terms of the Williamson Act contract, including permitted and compatible uses. If TNC plans to put the property under a Williamson Act contract, attach a copy of the application to the &quot;Notes &amp; Attachments&quot; section.</inlineHelpText>
        <label>Williamson Act Details</label>
        <type>TextArea</type>
    </fields>
</CustomObject>